# tmmiot-MindSphere-mclib-agent

./: CMakeLists.txt  README.md  agentconfig.json  build_mcl.sh  createDir.sh  onboard_dsc_upload.c  package.json  stream-pi-sensor-data.js  timeseries_upload.c
