CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
	PROJECT(TmmiotTimeAppplication LANGUAGES C)
	SET(CMAKE_C_STANDARD 99)
	SET(CMAKE_C_STANDARD_REQUIRED ON)
	FILE(GLOB SOURCES *.c)
	LIST(APPEND AGENT_SOURCES ${SOURCES})
	SET(MCL "/home/pi/tmmiot/MindSphere/tmmiotAgent/build/mcl/build/Release/libmc.so" CACHE INTERNAL "MCL" FORCE)
	SET(MCL_INCLUDE_DIRECTORIES "/home/pi/tmmiot/MindSphere/tmmiotAgent/build/mcl/include/" CACHE INTERNAL "MCL_INCLUDE_DIRECTORIES" FORCE)
	SET(AGENT_OUTPUT_DIR ${CMAKE_BINARY_DIR}/build)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${AGENT_OUTPUT_DIR})
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${AGENT_OUTPUT_DIR})
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${AGENT_OUTPUT_DIR})
	ADD_EXECUTABLE(${PROJECT_NAME} ${AGENT_SOURCES})
	TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${MCL_INCLUDE_DIRECTORIES})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MCL})
